<resources xmlns:xliff="rn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Messtex</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email"><u>info@messtex.de</u></string>
    <string name="scan_help"><u>Where can I find the reading code? Click here</u></string>
    <string name="skip"><u>Skip</u></string>
    <string name="title_activity_onboarding">OnboardingActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="scan">Start</string>
    <string name="more">More</string>
    <string name="contact">Contact:</string>
    <string name="about">About</string>
    <string name="about_title">Through years of experience, we have determined the importance of modernizing our professional field. For you as a tenant, for you as a property owner, and for our country and our earth.</string>
    <string name="about_paragraph_one">We want to digitize every manual reading in Germany! And thus make reading as easy and convenient as possible for everyone involved. Especially in times of digitization and the permanent lack of time, it is essential that we simplify things in this industry as well.</string>
    <string name="about_subtitle">The digital meter reading input, which you can easily record yourself with messtex, saves you a lot of time. The advantages are clear</string>
    <string name="about_bulletpoint_one">By reading with the Messtex app, you no longer have to waste vacation days on manual readings by service technicians</string>
    <string name="about_bulletpoint_two">Waiting for the service technicians becomes unnecessary</string>
    <string name="about_bulletpoint_three">Entering your home by foreign service technicians who have a lot of contact with other people and households becomes unnecessary - especially in these times in which we live with COVID-19</string>
    <string name="about_bulletpoint_four">We protect our environment together, because the many trips for first and second appointments, sometimes even third appointments become obsolete</string>
    <string name="about_bulletpoint_five">We save a lot of mail traffic and paper if you choose our digital reminder service for meter reading</string>
    <string name="about_paragraph_two">With the help of our partners, we have developed a unique system with which you can easily, time- and cost-efficiently perform your own meter reading. In designing our app, we placed great emphasis on making it easy and intuitive to use, so that truly everyone can benefit from our renewal</string>
    <string name="about_box_title">We are a contact you can trust. We are at your side in all situations and are always available for you.</string>
    <string name="principles_title">What makes us the best choice?</string>
    <string name="prinicples_subtitle">At Messtex, we have made it our mission to modernize the meter reading sector and to reform the market together with our partners and customers. The 21st century has already brought us many things: digitization is continuously overhauling and improving existing legacy systems and giving them a new lease of life. We are getting on this bandwagon of innovation and making the vision of revolutionizing the meter reading sector! To do this, we have set ourselves strict principles by which we live and act every day:</string>
    <string name="prinicples_bulletpoint_title_one">Living sustainability.</string>
    <string name="prinicples_bulletpoint_title_two">Anyone can be innovative.</string>
    <string name="prinicples_bulletpoint_title_three">Simply simple.</string>
    <string name="prinicples_bulletpoint_paragraph_one">By digitizing the process of recording heating and water costs, we are making a valuable contribution to the environment. In this way, we reduce our ecological footprint and take responsibility.</string>
    <string name="prinicples_bulletpoint_paragraph_two">Innovation means progress. We want to shape this progress so that everyone can follow it from home.</string>
    <string name="prinicples_bulletpoint_paragraph_three">We would like to make the recording of heating and water costs as simple and convenient as possible for you. With no waiting for the service technician, no formal clean-up, and no invasion of your privacy.</string>
    <string name="code_reading_title">Reading code</string>
    <string name="code_reading_subtitle">Please enter the six digit code from your informational letter.</string>
    <string name="next">Next</string>
    <string name="contact_title">Get in touch with us</string>
    <string name="email_title">Email</string>
    <string name="contact_details">Contact details</string>
    <string name="contact_details_subtitle">In order to assign your details correctly, we need your contact details:</string>
    <string name="first_name">First name*</string>
    <string name="surname">Surname*</string>
    <string name="contact_copy">Please send me the overview as an email copy</string>
    <string name="newsletter">May we inform you from now on simply and quickly by e-mail about news?</string>
    <string name="receiveViaEmail">May we remind you in the future per E-Mail instead of post letter about your meter reading?</string>
    <string name="phone_number">Phone number</string>
    <string name="address">Address</string>
    <string name="street">Street*</string>
    <string name="house_number">House number*</string>
    <string name="plz">PLZ*</string>
    <string name="city">City*</string>
    <string name="floor">Floor (optional)</string>
    <string name="required_fields">* Required fields</string>
    <string name="name">Name*</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="your_copy">Your copy</string>
    <string name="home_title">Welcome to Messtex</string>
    <string name="home_subtitle">Record your meter readings. Easy, quick and without an appointment.</string>
    <string name="start_reading">Start reading</string>
    <string name="co2_title">Help us protect the environment.</string>
    <string name="co2_subtitle">kilograms of CO₂ have already\nbeen saved together!</string>
    <string name="tips_and_tricks">Tips and Tricks</string>
    <string name="tips_and_tricks_subtitle">Here you will find useful tips for your everyday life.</string>
    <string name="show_more">Show more</string>
    <string name="get_in_contact">Get in contact with us</string>
    <string name="share_the_app">Contact us</string>
    <string name="manual_input_title">Manual input</string>
    <string name="manual_input_subtitle">Now enter the reading of your meter:</string>
    <string name="counter_number">Counter number</string>
    <string name="counter_type">Counter type</string>
    <string name="reading_date">Reading date</string>
    <string name="report_comments_or_defects">Report comments or defects</string>
    <string name="enter_manually">Enter manually</string>
    <string name="meter_number">Instructions for reading:</string>
    <string name="meter_reading">Meter reading:</string>
    <string name="more_about_messtex">More about Messtex</string>
    <string name="more_about_subtitle">We want to digitize every manual reading in Germany!</string>
    <string name="contact_form">Contact Form</string>
    <string name="privacy">Privacy</string>
    <string name="imprint">Imprint</string>
    <string name="restart_onboarding">Restart Onboarding</string>
    <string name="share_app">Share App</string>
    <string name="onboarding_title_one">Digital reading</string>
    <string name="onboarding_title_two">Without appointment with the Messtex App</string>
    <string name="onboarding_title_three">Cost effective for our environment</string>
    <string name="onboarding_subtitle_three">Together we protect our environment, take responsibility and you save money.</string>
    <string name="onboarding_subtitle_one">Enter your water and heating cost recordings digitally \&amp; comfortably from home.</string>
    <string name="onboarding_subtitle_two">All this without waiting, without formal cleanup and without foreign intrusion into your private sphere.</string>
    <string name="reading_steps_title">Start reading</string>
    <string name="reading_steps_subtitle">Please send us the following meter readings:</string>
    <string name="submit_meter_readings">Submit meter readings</string>
    <string name="success_title">Meter readings successfully transmitted</string>
    <string name="success_subtitle">Thank you %1$s for your contribution. Your data has been successfully transmitted. With your help we were able to save 3g of CO₂.</string>
    <string name="learn_more">Learn more</string>
    <string name="language">Language</string>
    <string name="imprint_title">Information according to § 5 TMG</string>
    <string name="represented_by">Represented by:</string>
    <string name="sales_tax_paragraph">Sales tax identification number according to §27a Umsatzsteuergesetz: DE337739004.</string>
    <string name="sales_tax_title">Sales tax ID:</string>
    <string name="responsibility_title">Responsible for the content according to § 55 Abs. 2 RStV:</string>
    <string name="responsibility_paragraph">BRIGHTDOCK Llc, Croatia, Rijeka (City of Rijeka) Nikole Tesle 9</string>
    <string name="disclaimer_paragraph">Despite careful control of the content, we do not assume any liability for the content of external links. The operators of the linked pages are solely responsible for their content.</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="modal_title">Counter reading explanation</string>
    <string name="email_required">Email*</string>
    <string name="message_required">Message*</string>
    <string name="learn_more_about">learn more about</string>
    <string name="success_card_subtitle">Check out our tips and tricks discover more from the Messtex world</string>
    <string name="success_card_title">Thank you, everything is done!</string>
    <string name="contact_form_title">Get in contact with us</string>
    <string name="contact_form_subtitle">Get in touch with us and describe your concern.</string>
    <string name="imprint_contact">Phone: 0151/41888186\nE-Mail: info@messtex.de</string>
    <string name="contact_and_contract_data">Contact and contract data</string>
    <string name="change">Change</string>
    <string name="submit">Submit</string>
    <string name="date">Reading date: %1$s</string>
    <string name="counter_number_explanation">Please scan the counter:<br />%1$s, %2$s No. %3$s</string>
    <string name="legal">General terms of use</string>
    <string name="messtex_environment">Messtex &amp; Environment</string>
    <string name="save_heating_costs">Save heating costs</string>
    <string name="save_water">Save water</string>
    <string name="confirmation_text">Do you want to send your data? Changes are not possible after sending.</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="meter_type_text">Please choose your meter type?</string>
    <string name="messtex_amp_numweltschutz">Messtex &amp; Environment</string>
    <string name="saving_water">Saving water</string>
    <string name="water_tip_paragraph_one">Water is a very precious commodity that we should use sustainably. In the following, we will show you a few tips with which you can quickly and effectively reduce your water consumption.</string>
    <string name="water_tip_title_one">In the bathroom and in the laundry:</string>
</resources>