<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:textAlignment="center">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="match_parent"
            android:layout_height="477dp"
            android:layout_marginBottom="19.5dp"
            android:contentDescription="HomeImage top"
            android:scaleType="centerCrop"
            android:src="@drawable/home_top"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextAppearance.Messtex.Headline2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19.5dp"
            android:text="@string/home_title"
            android:textAlignment="center"
            android:textColor="@color/dark"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/beforeScanningText"
            style="@style/TextAppearance.Messtex.ParagraphBold"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:text="@string/home_subtitle"
            android:textAlignment="center"
            android:textColor="@color/primary"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/startReadingButton"
            style="@style/TextAppearance.Messtex.ParagraphBold"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="83dp"
            android:layout_marginBottom="208dp"
            android:text="@string/start_reading"
            android:gravity="center"
            android:background="@drawable/background_button_main"
            android:textColor="@color/light"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/foreground_button_main"
            tools:ignore="HardcodedText" />

        <androidx.cardview.widget.CardView
            android:id="@+id/postScanningCard"
            android:layout_width="319dp"
            android:layout_height="160dp"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="41dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="5dp">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="61dp"
                    android:layout_height="78dp"
                    android:layout_marginStart="29dp"
                    android:src="@drawable/successful_read"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    style="@style/TextAppearance.Messtex.Headline2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/success_card_title"
                    android:textColor="@color/light"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    style="@style/TextAppearance.Messtex.Paragraph"
                    android:textColor="@color/light"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="29dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/success_card_subtitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/imageView5"
                    app:layout_constraintTop_toBottomOf="@+id/textView9" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/postScanningButton"
            android:layout_width="142dp"
            android:layout_height="34dp"
            android:layout_marginBottom="60dp"
            style="@style/TextAppearance.Messtex.TinyBold"
            android:background="@drawable/background_button_outlined"
            android:textColor="@color/primary_tint"
            android:gravity="center"
            android:text="@string/learn_more_about"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/foreground_button_outlined" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="267dp"
                android:layout_marginTop="74dp"
                android:contentDescription="Earth illustration"
                android:scaleType="fitXY"
                android:src="@drawable/rectangle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="101dp"
                android:layout_height="122dp"
                android:layout_marginBottom="219dp"
                android:contentDescription="Rectangle"
                android:src="@drawable/earth_illustration"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView4"
                style="@style/TextAppearance.Messtex.Headline2"
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="156dp"
                android:text="@string/co2_title"
                android:textAlignment="center"
                android:textColor="@color/light"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/co2_livedata"
                style="@style/TextAppearance.Messtex.Headline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="@color/light"
                android:textSize="56sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/textView5"
                style="@style/TextAppearance.Messtex.Paragraph"
                android:layout_width="222dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:text="@string/co2_subtitle"
                android:textAlignment="center"
                android:textColor="@color/light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/co2_livedata"
                tools:ignore="HardcodedText" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/textView6"
            style="@style/TextAppearance.Messtex.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="31dp"
            android:text="@string/tips_and_tricks"
            android:textAlignment="center"
            android:textColor="@color/dark"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Tips and tricks"
            android:src="@drawable/tips_graphics"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView7"
            style="@style/TextAppearance.Messtex.Headline2"
            android:layout_width="262dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="36dp"
            android:text="@string/tips_and_tricks_subtitle"
            android:textAlignment="center"
            android:textColor="@color/primary"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:id="@+id/homeFaq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"></LinearLayout>

        <TextView
            android:id="@+id/faqMoreButton"
            android:layout_width="142dp"
            android:layout_height="34dp"
            android:layout_marginTop="21dp"
            style="@style/TextAppearance.Messtex.TinyBold"
            android:background="@drawable/background_button_outlined"
            android:textColor="@color/primary_tint"
            android:gravity="center"
            android:text="@string/show_more"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/foreground_button_outlined"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/textView8"
            style="@style/TextAppearance.Messtex.Headline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="154dp"
            android:layout_marginBottom="27dp"
            android:text="@string/get_in_contact"
            android:textAlignment="center"
            android:textColor="@color/dark"
            tools:ignore="HardcodedText" />

        <ImageView
            android:id="@+id/imageView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="Contact"
            android:src="@drawable/contact_graphics"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/shareButton"
            android:layout_width="142dp"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="208dp"
            style="@style/TextAppearance.Messtex.TinyBold"
            android:background="@drawable/background_button_outlined"
            android:textColor="@color/primary_tint"
            android:gravity="center"
            android:text="@string/share_the_app"
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/foreground_button_outlined"
            tools:ignore="HardcodedText" />

    </LinearLayout>
</ScrollView>